# tuxedo-dgpu-run

./: .gitignore  CMakeLists.txt  ReadMe.md
debian/: changelog  control  copyright  gbp.conf
libexec/: dgpu-run  dgpu-run-desktop-entry
share/kservices5/ServiceMenus/: runApplicationWithDedicatedGPU.desktop  runApplicationWithDedicatedGPU.desktop.in  runBinariesWithDedicatedGPU.desktop
share/plasma/kickeractions/: runApplicationWithDedicatedGPU.desktop
